Membuat create dan update product

--- a/express-mongoose/views/products/detail.ejs
+++ b/express-mongoose/views/products/detail.ejs
@@ -12,7 +12,7 @@
         <li>Brand: <%= product.brand %></li>
         <li>Price: <%= product.price %></li>
         <li>Color: <%= product.color %></li>
-        <li>Size: <%= product.size %></li>
+        <li>Category: <%= product.category %></li>
     </ul>
     <br>
 
