--- a/express-mongoose/views/products/index.ejs
+++ b/express-mongoose/views/products/index.ejs
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>All Products</h1>
+    <a href="/products/create"><button>Add Product</button></a>
     <ul>
         <% for(let product of products) {%>
-        <li><%= product.name %> - <%= product.brand %> <a href="/products/<%= product._id %>"><button>Detail</button></a></li>
+        <li><%= product.name %> - <%= product.brand %> <a href="/products/<%= product._id %>"><button>Detail</button></a> <a href="/products/<%= product._id %>/edit"><button>Edit</button></a></li>
         <% } %>
     </ul>
 </body>
