--- a/express-mongoose/views/products/edit.ejs
+++ b/express-mongoose/views/products/edit.ejs
@@ -24,7 +24,7 @@
             <option value="Aksesoris" <%= product.category === "Aksesoris" ? 'selected' : '' %>>Aksesoris</option>
             <option value="Jaket" <%= product.category === "Jaket" ? 'selected' : '' %>>Jaket</option>
         </select> <br> <br>
-        <button type="submit">Add</button>
+        <button type="submit">Update</button>
     </form>
 </body>
 </html>
