--- a/express-mongoose/views/products/index.ejs
+++ b/express-mongoose/views/products/index.ejs
@@ -7,11 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>All Products</h1>
+    <h1><%= category %> Products</h1>
     <a href="/products/create"><button>Add Product</button></a>
+    <% if(category !== "All") {%>
+        <a href="/products"><button>All Product</button></a>
+    <% } %>
     <ul>
         <% for(let product of products) {%>
-        <li><%= product.name %> - <%= product.brand %> <a href="/products/<%= product._id %>"><button>Detail</button></a> <a href="/products/<%= product._id %>/edit"><button>Edit</button></a></li>
+        <li><%= product.name %> - <%= product.brand %> <a href="/products/<%= product._id %>"><button>Detail</button></a></li>
         <% } %>
     </ul>
 </body>
