--- a/express-mongoose/views/products/create.ejs
+++ b/express-mongoose/views/products/create.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Add Product</h1>
-    <form action="/products" method="post">
+    <form action="/garments/<%= garment_id %>/products" method="post">
         <label>Product Name</label> <br>
         <input type="text" name="name" id=""> <br> <br>
         <label>Brand</label> <br>
