Fix relation and add flash

--- a/express-mongoose/views/garment/index.ejs
+++ b/express-mongoose/views/garment/index.ejs
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Garment</h1>
+    <h5><%= message %></h5>
+    <br>
     <a href="/garments/create"><button>Add Garment</button></a>
     <ul>
         <% for(let garment of garments) {%>
